--- a/contato.html
+++ b/contato.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Cauã da Silva Salazar - SENAI">
     <meta name="keywords" content="medicina, OTS, doenças, médico">
     <link rel="icon" href="/img/MicrosoftTeams-image (4).png">
-    <link rel="stylesheet" href="/css/contato.css">
+    <link rel="stylesheet" href="css/contato.css">
     <title>OTS</title>
 </head>
 
