--- a/contato.html
+++ b/contato.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Cauã da Silva Salazar - SENAI">
     <meta name="keywords" content="medicina, OTS, doenças, médico">
-    <link rel="icon" href="/img/MicrosoftTeams-image (4).png">
-    <link rel="stylesheet" href="css/contato.css">
+    <link rel="icon" href="./img/MicrosoftTeams-image (4).png">
+    <link rel="stylesheet" href="./css/contato.css">
     <title>OTS</title>
 </head>
 
@@ -35,10 +35,10 @@
                 <div class="afiliacoes">
                     <h4>Filiações</h4>
 
-                    <img src="/img/omsLogo.png" alt="OMS Logo">
-                    <img src="/img/unimedLogo2.png" alt="Unimed Logo">
-                    <img src="/img/susLogo.png" alt="SUS Logo">
-                    <img src="/img/cruzvermelhaLogo.png" alt="Cruz Vermelha Logo">
+                    <img src="./img/omsLogo.png" alt="OMS Logo">
+                    <img src="./img/unimedLogo2.png" alt="Unimed Logo">
+                    <img src="./img/susLogo.png" alt="SUS Logo">
+                    <img src="./img/cruzvermelhaLogo.png" alt="Cruz Vermelha Logo">
                 </div>
 
                 <h1>Fale Conosco</h1>
@@ -103,7 +103,7 @@
 
         <!-- inicio do footer -->
         <footer>
-            <img src="/img/susLogo.png" alt="">
+            <img src="./img/susLogo.png" alt="">
 
             &copy Direitos Reservados a OTS
             2022
