--- a/sobre.html
+++ b/sobre.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Cauã da Silva Salazar - SENAI">
     <meta name="keywords" content="medicina, OTS, doenças, médico">
-    <link rel="icon" href="/img/MicrosoftTeams-image (4).png">
-    <link rel="stylesheet" href="/css/sobre.css">
+    <link rel="icon" href="./img/MicrosoftTeams-image (4).png">
+    <link rel="stylesheet" href="./css/sobre.css">
     <title>OTS</title>
 </head>
 
@@ -34,7 +34,7 @@
     <div class="container">
 
         <div class="containerImg">
-            <img src="/img/OTS.png" alt="">
+            <img src="./img/OTS.png" alt="">
 
             <p>
                 O nosso projeto foi inciado em maio 2020, junto com a pandemia do coronavírus e com um prazo pequeno
@@ -108,7 +108,7 @@
 
     <!-- inicio do footer -->
     <footer>
-        <img src="/img/susLogo.png" alt="">
+        <img src="./img/susLogo.png" alt="">
 
         &copy Direitos Reservados a OTS
         2022
